# paperwork-cli

./: .gitignore  Dockerfile  README.md  pyproject.toml
_Design/: README.md
_Design/01_PRD/: README.md  prd.md
_Design/02_Research/: README.md
_Design/03_ADR/: ADR-001__eng__pdf-rendering-library.md  ADR-002__tpl__template-format.md  ADR-003__sys__engine-only-design.md  ADR-004__sys__profile-schema-design.md  ADR-005__fit__two-phase-optimizer.md  ADR-006__fit__immutable-data-patterns.md  ADR-007__tpl__spec-yaml-llm.md  ADR-008__sys__photo-field-design.md  ADR-009__api__fastapi-optional-extra.md  ADR-010__cli__template-dir-resolution.md  ADR-011__cli__job-yaml-format.md  README.md
_Design/04_Specs/: README.md
_Design/04_Specs/active/additional-template-designs/: 01_requirements.md  02_design.md  03_tasks.md
_Design/04_Specs/active/api-spec-endpoint/: 01_requirements.md  02_design.md  03_tasks.md
src/paperwork/: __init__.py  cli.py
src/paperwork/api/: app.py  routes.py
src/paperwork/autofit/: __init__.py  css_override.py  estimator.py  models.py  optimizer.py
src/paperwork/engine/: __init__.py  filters.py  renderer.py
src/paperwork/models/: __init__.py  cv.py  render_config.py  template_meta.py
src/paperwork/profiles/: __init__.py  loader.py
src/paperwork/templates/: __init__.py  registry.py  validator.py
templates/classic/: cv.css  cv.html  cv.scss  spec.yaml  template.yaml
templates/classic-wide/: cv.css  cv.html  cv.scss  template.yaml
templates/cover-letter/: cover-letter.css  cover-letter.html  cover-letter.scss  spec.yaml  template.yaml
(+3 files in other folders)
