[project]
name = "paperwork"
version = "0.3.0"
description = "Template-driven document generation engine — CVs, cover letters, letters, and more"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "weasyprint>=66.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
paperwork = "paperwork.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperwork"]

[tool.pytest.ini_options]
pythonpath = ["src"]
